--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
             <form method="POST">
                 <div class="mb-3">
                     <label for="text" class="form-label">Enter Text:</label>
-                    <textarea class="form-control" id="text" name="text" rows="4" placeholder="Type your review here...">{{ input_text }}</textarea>
+                    <textarea class="form-control" id="text" name="text" rows="4" placeholder="Eg :- I'm happy...">{{ Enter_text }}</textarea>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Analyze Sentiment</button>
             </form>
